tester/testsuite/bad/bad047.jl
int main() { 
   int 2;
   return 1;
}
